# artificialIntelligenceProject

./: README.md
classicalPlanning/classes/: EPP.java  EmergencyHeuristic.java  Node.java
classicalPlanning/pddl/: emergency.pddl  firstProblem.pddl  secondProblem.pddl  thirdProblem.pddl
plansys2_project/: CMakeLists.txt  package.xml
plansys2_project/launch/: commands  plansys2_project_launch.py
plansys2_project/pddl/: durativePlan.plan  emergency_durative_actions.pddl  firstProblemDurative.pddl
plansys2_project/source/: charge_action_node.cpp  discharge_action_node.cpp  fill_action_node.cpp  give_content_action_node.cpp  move_agent_action_node.cpp  move_vehicle_action_node.cpp
